--- a/package.json
+++ b/package.json
@@ -26,26 +26,31 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.0.2",
+    "broccoli-asset-rev": "2.0.2",
     "ember-cli": "0.2.5",
     "ember-cli-app-version": "0.3.3",
-    "ember-cli-babel": "^5.0.0",
     "ember-cli-content-security-policy": "0.4.0",
-    "ember-cli-dependency-checker": "^1.0.0",
-    "ember-cli-htmlbars": "0.7.4",
+    "ember-cli-dependency-checker": "1.0.0",
+    "ember-cli-htmlbars": "0.7.6",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.3.13",
     "ember-cli-uglify": "1.0.1",
-    "ember-data": "1.0.0-beta.16.1",
+    "ember-code-snippet": "^1.0.1",
+    "ember-data": "1.0.0-beta.17",
+    "ember-disable-prototype-extensions": "^1.0.1",
     "ember-export-application-global": "^1.0.2",
     "ember-try": "0.0.7",
     "grunt": "^0.4.5",
     "grunt-bump": "0.0.16",
     "grunt-cli": "^0.1.13",
     "jit-grunt": "^0.9.0",
+    "liquid-fire": "^0.19.3",
     "time-grunt": "^1.0.0"
   },
+  "dependencies": {
+    "ember-cli-babel": "^5.0.0"
+  }
   "description": "Touch and gesture support in Ember based mobile apps and websites.",
   "keywords": [
     "ember-addon"
